--- a/client/src/main/resources/application.yml
+++ b/client/src/main/resources/application.yml
@@ -9,3 +9,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8888/eureka/
+      
+logging:
+  level:
+    '[org.springframework.core.io.support]': DEBUG
+    '[org.springframework.context.annotation]': DEBUG      
